# Maestro

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  install.sh  package-lock.json
.github/workflows/: ci.yml  release.yml
.maestro/pipelines/: review-loop.yaml
.maestro/prompts/: 9LvO3oid-iter-1.md  9NOnrpKY-iter-1.md  KHFCO0US-iter-1.md  mWllKR47-iter-1.md
.playwright-mcp/: page-2026-05-10T05-44-07-447Z.yml  page-2026-05-10T05-44-15-044Z.yml  page-2026-05-10T05-44-34-934Z.yml  page-2026-05-10T05-44-38-143Z.yml  page-2026-05-10T05-44-44-431Z.yml  page-2026-05-10T05-46-36-009Z.yml  page-2026-05-11T08-29-43-968Z.yml  page-2026-05-11T08-30-13-538Z.yml  page-2026-05-11T08-33-29-349Z.yml  page-2026-05-11T08-34-14-677Z.yml  page-2026-05-11T08-34-39-686Z.yml  page-2026-05-11T09-31-18-689Z.yml  page-2026-05-11T09-31-37-205Z.yml  page-2026-05-11T09-32-12-145Z.yml  page-2026-05-11T09-32-29-814Z.yml
.sandcastle/: CODING_STANDARDS.md  Dockerfile  implement-prompt.md  merge-prompt.md  plan-prompt.md  review-prompt.md
crates/maestro-cli/: Cargo.toml
crates/maestro-daemon/: Cargo.toml  build.rs
docs/: design-brief.md
docs/adr/: 0001-sharp-tool-not-safe-tool.md  0002-mechanical-conditionals-only.md  0003-stack-rust-react-xyflow.md  0004-testing-strategy.md
docs/design/: HANDOFF-README.md  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/e2e/: cold-start-integration.spec.ts  foreach-over.spec.ts  hot-reload-conflict.spec.ts  initial-prompt.spec.ts  library-node-ports.spec.ts  node-io-modal.spec.ts  pipeline-info-panel.spec.ts  (+6 more)
(+141 files in other folders)
